log/build_2022-03-17_10-49-00/rc_data_emulator/stderr.log
  File "/home/nayab/dev_ws/install/rc_data_emulator/lib/python3.8/site-packages/rc_data_emulator/rc_data_emu.py", line 42
    if !(autonomousCommand==0):
       ^
SyntaxError: invalid syntax

